--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1908,7 +1908,7 @@
          For best results, care should be taken such that this value remains
          larger than the minimum reported touchMajor/touchMinor values
          reported by the hardware. -->
-    <dimen name="config_minScalingSpan">27dp</dimen>
+    <dimen name="config_minScalingSpan">27mm</dimen>
 
     <!-- Minimum accepted value for touchMajor while scaling. This may be tuned
          per-device in overlays. -->
